[package]
name = "organizador_facturas"
version = "2.0.0"
edition = "2021"
authors = ["Ravsa"]
description = "Organizador automático de PDFs e imágenes para Ravsa"

[dependencies]
eframe = "0.28.1"
regex = "1.10.4"
chrono = "0.4.38"
walkdir = "2.5.0"
once_cell = "1.19.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[build-dependencies]
winres = "0.1.12"
